--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ End Fixed Navigation
 	<div class="container-fluid h-100">
     <div class="row h-100">
 			<div class="col-12 col-md-12 video-section d-flex align-items-center justify-content-center">
-				<video autoplay muted loop playsinline class="bg-video">
+				<video autoplay muted="true" loop playsinline class="bg-video">
 					<source src="images/background-video.mp4" type="video/mp4">
 					<source src="images/background-video.webm" type="video/webm">
 					Your browser does not support the video tag.
