--- a/about.html
+++ b/about.html
@@ -108,10 +108,10 @@ Fixed Navigation
             <a class="nav-link" href="index.html">ACCUEIL</a>
           </li>
           <li class="nav-item  active ">
-            <a class="nav-link" href="about.html">A PROPO</a>
+            <a class="nav-link" href="about.html">A PROPOS</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="service.html">NOS SERVICES & TARIFS</a>
+            <a class="nav-link" href="pricing.html">NOS SERVICES & TARIFS</a>
           </li>
           <!-- <li class="nav-item ">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -155,32 +155,21 @@ Fixed Navigation
 End Fixed Navigation
 ==================================== -->
 
-<section class="single-page-header">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<h2>About Us</h2>
-				<ol class="breadcrumb header-bradcrumb justify-content-center">
-					<li class="breadcrumb-item"><a href="index.html" class="text-white">Home</a></li>
-					<li class="breadcrumb-item active" aria-current="page">About Us</li>
-				</ol>
-			</div>
-		</div>
-	</div>
-</section>
+
 
 <section class="about-shot-info section-sm">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 mt-20">
-				<h2 class="mb-3">We Create Designs<br> and technology</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat voluptate molestias, quaerat quo natus
-					dolor harum voluptatibus modi dicta ducimus.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quae officia earum dolore est quaerat
-					cupiditate voluptatibus id, magni alias veniam voluptate, libero explicabo, distinctio atque!</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, fugit itaque ratione incidunt voluptas.
-					Quaerat quidem dolor, quisquam amet inventore quas adipisci ea sint qui placeat beatae molestias aut, aperiam!
-				</p>
+				<h2 class="mb-3">KEVIN GAUDIN</h2>
+				<h3>Dirigeant de DroneService17 et Télépilote certifié</h3>
+				<small>(références en bas de page)</small>
+				<p></p>
+				<p>Bonjour,</p>
+				<p>Je réalise les prises de vue aériennes par drone des toitures (maison individuelle, bâtiment, site industriel) pour les particuliers, les entreprises et les experts d’assurances, sur le secteur de La Rochelle et alentours.</p>
+				<p>Les prises de vue en haute-définition sont réalisées avec un drone de moins de 800grammes , ce qui ne nécessite pas d’autorisation préfectorale préalable et optimise drastiquement les délais d’intervention.</p>
+				<p>Le drone utilisé pour les prises de vue est le DJI MINI 3 PRO. Un drone haut de gamme qui prend des photos en 48 millions de pixel et qui filme jusqu’en 4K.</p>
+				<p>N’hésitez pas à me contacter via le formulaire de contact ici(lien vers le formulaire) en cas de besoin.</p>
 			</div>
 			<div class="col-lg-6 mt-4 mt-lg-0">
 				<img loading="lazy" class="img-fluid" src="images/company/company-image.jpg" alt="">
@@ -194,63 +183,34 @@ End Fixed Navigation
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<h3>Our Mission</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere in suscipit voluptatum totam dolores
-					assumenda vel, quia earum voluptatem blanditiis vero accusantium saepe aliquid nulla nemo accusamus, culpa
-					inventore! Culpa nemo aspernatur tenetur, at quam aliquid reprehenderit obcaecati dicta illum mollitia,
-					perferendis hic, beatae voluptates? Ex labore, obcaecati harum nam.</p>
-				<img loading="lazy" src="images/company/company-image-2.jpg" alt="" class="img-fluid mt-30">
-			</div>
-			<div class="col-md-6 mt-5 mt-md-0">
-				<h3>Our Vision</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere in suscipit voluptatum totam dolores
-					assumenda vel, quia earum voluptatem blanditiis vero accusantium saepe aliquid nulla nemo accusamus, culpa
-					inventore! Culpa nemo aspernatur tenetur, at quam aliquid reprehenderit obcaecati dicta illum mollitia,
-					perferendis hic, beatae voluptates? Ex labore, obcaecati harum nam.</p>
-				<img loading="lazy" src="images/company/company-image-3.jpg" alt="" class="img-fluid mt-30">
+				<h3>Mes références :</h3>
+				<p><b>Numéro de télépilote sur le site du Ministère Chargé des Transports :</b></p>
+				<p>FRA-RP-000000089577</p>
+				<p><b>Numéro d'exploitant sur le site du Ministère Chargé des Transports :</b></p>
+				<p>87887842000032</p>
 			</div>
 		</div>
 	</div>
 </section>
 
 
-<section class="promo-video section-sm">
-	<div class="container">
-		<div class="row justify-content-center">
-			<!-- section title -->
-			<div class="col-xl-6 col-lg-8">
-				<div class="title text-center">
-					<h2>Our Promo Video</h2>
-					<p>Vestibulum nisl tortor, consectetur quis imperdiet bibendum, laoreet sed arcu.Sed condimentum iaculis ex,
-						in faucibus lorem accumsan non. Donec mattis tincidunt metus. Morbi sed tortor a risus luctus dignissim.</p>
-					<div class="border"></div>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<!-- /section title -->
-			<div class="col-md-8 mx-auto">
-				<iframe src="https://player.vimeo.com/video/51119176" width="100%" height="360" frameborder="0"
-					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-			</div>
-		</div>
-	</div>
-</section>
+
 
 <!--
 Start Call To Action
 ==================================== -->
-<section class="call-to-action-2 section">
+<section class="call-to-action section">
 	<div class="container">
-		<div class="row">
-			<div class="col-md-12 text-center">
-				<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempor eros. Pellentesque elementum nulla sed justo tempor posuere sit amet sit amet ligula.</h2>
+		<div class="row justify-content-center">
+			<div class="col-xl-6 col-lg-8 text-center">
+				<h2>Un besoin en inspection de toiture ? N’hésitez pas à nous contacter.</h2>
+				<a href="contact.html" class="btn btn-main">Contactez-nous</a>
 			</div>
-		</div> 		<!-- End row -->
-	</div>   	<!-- End container -->
-</section>   <!-- End section -->
+		</div> <!-- End row -->
+	</div> <!-- End container -->
+</section> <!-- End section -->
 
-<section class="section gallery">
+<!-- <section class="section gallery">
 	<div class="container-fluid">
 		<div class="row justify-content-center">
 			<div class="col-xl-6 col-lg-8">
@@ -282,207 +242,16 @@ Start Call To Action
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 
-<!-- Start Our Team
-		=========================================== -->
-<section class="team" id="team">
-	<div class="container">
-		<div class="row justify-content-center">
-			<!-- section title -->
-			<div class="col-xl-6 col-lg-8">
-				<div class="title text-center ">
-					<h2>Our Team</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque quasi tempora obcaecati, quis
-						similique quos.</p>
-					<div class="border"></div>
-				</div>
-			</div>
-			<!-- /section title -->
-		</div>
-		<div class="row">
-			<!-- team member -->
-			<div class="col-lg-4 col-md-6">
-				<div class="team-member text-center">
-					<div class="member-photo">
-						<!-- member photo -->
-						<img loading="lazy" class="img-fluid" src="images/team/member-1.jpg" alt="Meghna">
-						<!-- /member photo -->
 
-						<!-- member social profile -->
-						<div class="mask">
-							<ul class="clearfix">
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-facebook"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-twitter"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-google-outline"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-dribbble"></i></a></li>
-							</ul>
-						</div>
-						<!-- /member social profile -->
-					</div>
-
-					<!-- member name & designation -->
-					<div class="member-content">
-						<h3>Michael Jonson</h3>
-						<span>Head Of Marketing</span>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
-					</div>
-					<!-- /member name & designation -->
-
-				</div>
-			</div>
-			<!-- end team member -->
-
-			<!-- team member -->
-			<div class="col-lg-4 col-md-6">
-				<div class="team-member text-center">
-					<div class="member-photo">
-						<!-- member photo -->
-						<img loading="lazy" class="img-fluid" src="images/team/member-2.jpg" alt="Meghna">
-						<!-- /member photo -->
-
-						<!-- member social profile -->
-						<div class="mask">
-							<ul class="clearfix">
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-facebook"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-twitter"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-google-outline"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-dribbble"></i></a></li>
-							</ul>
-						</div>
-						<!-- /member social profile -->
-					</div>
-
-					<!-- member name & designation -->
-					<div class="member-content">
-						<h3>Carrick Mollenkamp</h3>
-						<span>Web Developer</span>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
-					</div>
-					<!-- /member name & designation -->
-				</div>
-			</div>
-			<!-- end team member -->
-
-			<!-- team member -->
-			<div class="col-lg-4 col-md-6">
-				<div class="team-member text-center">
-					<div class="member-photo">
-						<!-- member photo -->
-						<img loading="lazy" class="img-fluid" src="images/team/member-3.jpg" alt="Meghna">
-						<!-- /member photo -->
-
-						<!-- member social profile -->
-						<div class="mask">
-							<ul class="clearfix">
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-facebook"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-twitter"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-google-outline"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-dribbble"></i></a></li>
-							</ul>
-						</div>
-						<!-- /member social profile -->
-					</div>
-
-					<!-- member name & designation -->
-					<div class="member-content">
-						<h3>David Gauthier</h3>
-						<span>Head Of Management</span>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
-					</div>
-					<!-- /member name & designation -->
-
-				</div>
-			</div>
-			<!-- end team member -->
-		</div> <!-- End row -->
-	</div> <!-- End container -->
-</section> <!-- End section -->
-<!--
-Start Counter Section
-==================================== -->
-<section class="counter-wrapper section-sm">
-	<div class="container">
-		<div class="row justify-content-center">
-			<div class="col-xl-6 col-lg-8 text-center">
-				<div class="title">
-					<h2>Award-Winning Agency</h2>
-					<p>Vestibulum nisl tortor, consectetur quis imperdiet bibendum, laoreet sed arcu. Sed condimentum iaculis ex, in faucibus lorem accumsan non. Donec mattis tincidunt metus. Morbi sed tortor a risus luctus dignissim.</p>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<!-- first count item -->
-			<div class="col-md-3 col-sm-6 col-xs-6 text-center ">
-				<div class="counters-item">
-					<i class="tf-ion-ios-alarm-outline"></i>
-					<div>
-						<span class="counter" data-count="150">0</span>
-					</div>
-					<h3>Happy Clients</h3>
-				</div>
-			</div>
-			<!-- end first count item -->
-
-			<!-- second count item -->
-			<div class="col-md-3 col-sm-6 col-xs-6 text-center ">
-				<div class="counters-item">
-					<i class="tf-ion-ios-analytics-outline"></i>
-					<div>
-						<span class="counter" data-count="130">0</span>
-					</div>
-					<h3>Projects completed</h3>
-				</div>
-			</div>
-			<!-- end second count item -->
-
-			<!-- third count item -->
-			<div class="col-md-3 col-sm-6 col-xs-6 text-center ">
-				<div class="counters-item">
-					<i class="tf-ion-ios-compose-outline"></i>
-					<div>
-						<span class="counter" data-count="99">0</span>
-					</div>
-					<h3>Positive feedback</h3>
-
-				</div>
-			</div>
-			<!-- end third count item -->
-
-			<!-- fourth count item -->
-			<div class="col-md-3 col-sm-6 col-xs-6 text-center ">
-				<div class="counters-item kill-border">
-					<i class="tf-ion-ios-bolt-outline"></i>
-					<div>
-						<span class="counter" data-count="250">0</span>
-					</div>
-					<h3>Cups of Coffee</h3>
-				</div>
-			</div>
-			<!-- end fourth count item -->
-		</div> <!-- end row -->
-	</div> <!-- end container -->
-</section> <!-- end section -->
-<!--
-Start Call To Action
-==================================== -->
-<section class="call-to-action section">
-	<div class="container">
-		<div class="row justify-content-center">
-			<div class="col-xl-6 col-lg-8 text-center">
-				<h2>Un besoin en inspection de toiture ? N’hésitez pas à nous contacter.</h2>
-				<a href="contact.html" class="btn btn-main">Contactez-nous</a>
-			</div>
-		</div> <!-- End row -->
-	</div> <!-- End container -->
-</section> <!-- End section -->
 
 <footer id="footer" class="bg-one">
   <div class="top-footer">
     <div class="container">
       <div class="row justify-content-around">
         <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
-          <h3>A PROPO</h3>
+          <h3>A PROPOS</h3>
           <p>KEVIN GAUDIN<br />Dirigeant de DroneService17 et Télépilote certifié</p>
         </div>
         <!-- End of .col-sm-3 -->
@@ -492,8 +261,8 @@ Start Call To Action
             <li>
               <h3>NOS SERVICES & TARIFS</h3>
             </li>
-            <li><a href="service.html">Inspection de toiture pour les particuliers</a></li>
-            <li><a href="service.html">Prises de vue toiture pour les professionnels</a></li>
+            <li><a href="pricing.html">Inspection de toiture pour les particuliers</a></li>
+            <li><a href="pricing.html">Prises de vue toiture pour les professionnels</a></li>
           </ul>
         </div>
         <!-- End of .col-sm-3 -->
@@ -503,14 +272,14 @@ Start Call To Action
             <li>
               <h3>LIENS</h3>
             </li>
-            <li><a href="about.html">A PROPO</a></li>
-            <li><a href="service.html">NOS SERVICES & TARIFS</a></li>
+            <li><a href="about.html">A PROPOS</a></li>
+            <li><a href="pricing.html">NOS SERVICES & TARIFS</a></li>
             <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
         <!-- End of .col-sm-3 -->
 
-        <div class="col-lg-3 col-md-6">
+        <!-- <div class="col-lg-3 col-md-6">
           <ul>
             <li>
               <h3>Connectez-vous avec nous</h3>
@@ -519,7 +288,7 @@ Start Call To Action
             <li><a href="https://www.twitter.com/themefisher/">Twitter</a></li>
             <li><a href="https://www.youtube.com/channel/UCx9qVW8VF0LmTi4OF2F8YdA">Youtube</a></li>
           </ul>
-        </div>
+        </div> -->
         <!-- End of .col-sm-3 -->
 
       </div>
@@ -527,7 +296,7 @@ Start Call To Action
   </div>
   <div class="footer-bottom">
     <h5>&copy; Copyright 2025. All rights reserved.</h5>
-    <h6>Design and Developed by <a href="https://themefisher.com/">Themefisher</a></h6>
+    <!-- <h6>Design and Developed by <a href="https://themefisher.com/">Themefisher</a></h6> -->
   </div>
 </footer> <!-- end footer -->
 
