--- a/pricing.html
+++ b/pricing.html
@@ -110,7 +110,7 @@ Fixed Navigation
           <li class="nav-item ">
             <a class="nav-link" href="about.html">A PROPOS</a>
           </li>
-          <li class="nav-item ">
+          <li class="nav-item  active ">
             <a class="nav-link" href="pricing.html">NOS SERVICES & TARIFS</a>
           </li>
           <!-- <li class="nav-item ">
@@ -122,7 +122,7 @@ Fixed Navigation
           <li class="nav-item ">
             <a class="nav-link" href="pricing.html">Pricing</a>
           </li> -->
-          <li class="nav-item  active ">
+          <li class="nav-item ">
             <a class="nav-link" href="contact.html">CONTACT</a>
           </li>
           <!-- <li class="nav-item dropdown">
@@ -157,96 +157,160 @@ End Fixed Navigation
 
 
 
- <!--Start Contact Us
-	=========================================== -->
- <section class="contact-us" id="contact">
- 	<div class="container">
- 		<div class="row justify-content-center">
-			 <!-- section title -->
- 			<div class="col-xl-6 col-lg-8">
-				<div class="title text-center">
-					<h2>Contactez-nous</h2>
-					<p>Un besoin en inspection de toiture ? N’hésitez pas à nous contacter</p>
+
+<!-- Start Pricing section
+		=========================================== -->
+<section class="pricing-table" id="pricing">
+	<div class="container">
+		<div class="row justify-content-center">
+			<!-- section title -->
+			<div class="col-xl-6 col-lg-8">
+				<div class="title title-white text-center ">
+					<h2>INSPECTION DE TOITURE POUR LES PARTICULIERS</h2>
+					<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium soluta deserunt eaque, est, quia hic odit sed incidunt officiis quidem.</p> -->
 					<div class="border"></div>
 				</div>
 			</div>
 			<!-- /section title -->
 		</div>
- 		<div class="row">
- 			<!-- Contact Details -->
- 			<div class="contact-details col-md-6 ">
- 				<h3 class="mb-3">Contact</h3>
- 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, vero, provident, eum eligendi blanditiis ex
- 					explicabo vitae nostrum facilis asperiores dolorem illo officiis ratione vel fugiat dicta laboriosam labore
- 					adipisci.</p>
- 				<ul class="contact-short-info mt-4">
- 					<li class="mb-3">
- 						<i class="tf-ion-ios-home"></i>
- 						<span>Khaja Road, Bayzid, Chittagong, Bangladesh</span>
- 					</li>
- 					<li class="mb-3">
- 						<i class="tf-ion-android-phone-portrait"></i>
- 						<span>Phone: +880-31-000-000</span>
- 					</li>
- 					<li class="mb-3">
- 						<i class="tf-ion-android-globe"></i>
- 						<span>Fax: +880-31-000-000</span>
- 					</li>
- 					<li>
- 						<i class="tf-ion-android-mail"></i>
- 						<span>Email: hello@meghna.com</span>
- 					</li>
- 				</ul>
- 				<!-- Footer Social Links -->
- 				<div class="social-icon">
- 					<ul>
- 						<li><a href="https://themefisher.com/"><i class="tf-ion-social-facebook"></i></a></li>
- 						<li><a href="https://themefisher.com/"><i class="tf-ion-social-twitter"></i></a></li>
- 						<li><a href="https://themefisher.com/"><i class="tf-ion-social-dribbble-outline"></i></a></li>
- 						<li><a href="https://themefisher.com/"><i class="tf-ion-social-linkedin-outline"></i></a></li>
- 					</ul>
- 				</div>
- 				<!--/. End Footer Social Links -->
- 			</div>
- 			<!-- / End Contact Details -->
+		<div class="row">
+			<!-- single pricing table -->
+			<div class="pricing-container col-lg-4 col-md-6">
+				<div class="pricing-item">
 
- 			<!-- Contact Form -->
- 			<div class="contact-form col-md-6 ">
- 				<form id="contact-form" method="post" role="form">
- 					<div class="form-group mb-4">
- 						<input type="text" placeholder="Ton nom" class="form-control" name="name" id="name" required>
- 					</div>
+					<!-- plan name & value -->
+					<div class="price-title">
+						<h3>Prises de vue aériennes de votre toiture</h3>
+						<strong class="value"><s>94€</s> 55€*</strong><br><small class="value-info">(promotion en cours)</small>
+						<!-- <p>Perfect for single freelancers who work by themselves</p> -->
+					</div>
+					<!-- /plan name & value -->
 
- 					<div class="form-group mb-4">
- 						<input type="email" placeholder="Ton email" class="form-control" name="email" id="email" required>
- 					</div>
+					<!-- plan description -->
+					<ul>
+						<li><i class="tf-ion-ios-arrow-forward"></i> Nous nous déplaçons à domicile et réalisons, à l’aide d’un drone, des photos haute-définition (48Mpx) de toute la toiture (couverture, faitage, réseau d'évacuation, rivage,etc...)</li>
+						<li><i class="tf-ion-ios-arrow-forward"></i> Toutes les photos vous sont ensuite envoyées par mail via un lien de téléchargement, dans un délai maximum de 24heures.</li>
+					</ul>
+					<!-- /plan description -->
 
- 					<div class="form-group mb-4">
- 						<input type="text" placeholder="Sujet" class="form-control" name="subject" id="subject" required>
- 					</div>
+					<!-- signup button -->
+					<a class="btn btn-main" href="contact.html">Contactez-nous</a>
+					<!-- /signup button -->
 
- 					<div class="form-group mb-4">
- 						<textarea rows="6" placeholder="Message" class="form-control" name="message" id="message" required></textarea>
- 					</div>
- 					<div id="cf-submit">
- 						<input type="submit" id="contact-submit" class="btn btn-transparent" value="Envoyer">
- 					</div>
+				</div>
+			</div>
+			<!-- end single pricing table -->
 
- 				</form>
- 			</div>
- 			<!-- ./End Contact Form -->
+			<!-- single pricing table -->
+			<div class="pricing-container col-lg-4 col-md-6">
+				<div class="pricing-item">
 
- 		</div> <!-- end row -->
- 	</div> <!-- end container -->
- </section> <!-- end section -->
+					<!-- plan name & value -->
+					<div class="price-title">
+						<h3>Diagnostic du couvreur</h3>
+						<strong class="value">35€</strong>
+						<p>Nous transmettons de manière anonyme les prises de vue réalisées à un couvreur partenaire afin qu’il établisse :</p>
+					</div>
+					<!-- /plan name & value -->
 
- <!--================================
-=            Google Map            =
-=================================-->
-<!-- <div class="google-map">
-	<div id="map_canvas" class="map_canvas" data-latitude="40.712776" data-longitude="-74.005974" data-marker="images/marker.png" data-marker-name="Bingo"></div>
-</div> -->
- <!--====  End of Google Map  ====-->
+					<!-- plan description -->
+					<ul>
+						<li><i class="tf-ion-ios-arrow-forward"></i> un compte rendu détaillé des éventuelles pathologies apparentes (fissures, zones d’infiltration, tuile déplacée ou cassée, obstruction du réseau d’évacuation, faîtage endommagé, etc...)</li>
+						<li><i class="tf-ion-ios-arrow-forward"></i>Ses recommandations sur les travaux à réaliser (s'il y a lieu)<br>(Exemple : démoussage, réparation faitage, remplacement de tuiles, etc...)</li>
+					</ul>
+					<!-- /plan description -->
+
+					<div class="price-title">
+						<p>Nous vous transmettons ce rapport dans un délai rapide.</p>
+					</div>
+
+					<!-- signup button -->
+					<a class="btn btn-main" href="contact.html">Contactez-nous</a>
+					<!-- /signup button -->
+
+				</div>
+			</div>
+			<!-- end single pricing table -->
+
+			<!-- single pricing table -->
+			<div class="pricing-container col-lg-4 col-md-6">
+				<div class="pricing-item">
+
+					<!-- plan name & value -->
+					<div class="price-title">
+						<h3>Mise en relation avec un couvreur partenaire</h3>
+						<strong class="value">Offert</strong>
+						<p>Si vous souhaitez faire réaliser des travaux , nous pouvons vous mettre en relation avec l’un de nos couvreurs partenaires</p>
+					</div>
+					<!-- /plan name & value -->
+
+					<!-- plan description -->
+					<!-- <ul>
+						<li><i class="tf-ion-ios-arrow-forward"></i> Unlimited Disk Space</li>
+						<li><i class="tf-ion-ios-arrow-forward"></i> Unlimited Email Account</li>
+						<li><i class="tf-ion-ios-arrow-forward"></i> Script Installer</li>
+						<li><i class="tf-ion-ios-arrow-forward"></i> Unlimited Storage</li>
+						<li><i class="tf-ion-ios-arrow-forward"></i> Unlimited Bandwidth</li>
+						<li><i class="tf-ion-ios-arrow-forward"></i> 24/7 Tech Support</li>
+					</ul> -->
+					<!-- /plan description -->
+
+					<!-- signup button -->
+					<a class="btn btn-main" href="contact.html">Contactez-nous</a>
+					<!-- /signup button -->
+
+				</div>
+			</div>
+			<!-- end single pricing table -->
+
+
+		</div> <!-- End row -->
+	</div> <!-- End container -->
+	<div class="container">
+		<div class="row justify-content-center">
+			<!-- section title -->
+			<div class="col-xl-6 col-lg-8">
+				<div class="title title-white text-center ">
+					<h2>PRISES DE VUE TOITURE POUR LES PROFESSIONNELS</h2>
+					<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium soluta deserunt eaque, est, quia hic odit sed incidunt officiis quidem.</p> -->
+					<div class="border"></div>
+				</div>
+			</div>
+			<!-- /section title -->
+		</div>
+		<div class="row">
+			<!-- single pricing table -->
+			<div class="col-lg-4 col-md-6">
+				<div class="pricing-item">
+
+					<!-- plan name & value -->
+					<div class="price-title">
+						<h3>Expert d’assurance, couvreur, site industriel,...</h3>
+						<strong class="value">En fonction de la demande</strong>
+						<!-- <p>Perfect for single freelancers who work by themselves</p> -->
+					</div>
+					<!-- /plan name & value -->
+
+					<!-- plan description -->
+					<ul>
+						<li><i class="tf-ion-ios-arrow-forward"></i> Nous nous déplaçons sur site et réalisons, en fonction de vos besoin, photos ou vidéos de toitures, bâtiments, site industriel, etc....</li>
+						<li><i class="tf-ion-ios-arrow-forward"></i> Nous utilisons un drone qui ne nécessite pas d’autorisation préfectorale préalable (drone de moins de 250g opérant en catégorie de vol dite ouverte). Cela optimise drastiquement nos délais d’intervention.</li>
+						<li><i class="tf-ion-ios-arrow-forward"></i> Nous vous transmettons les clichés dans un délai de 24h maximum (triés) , ou immédiatement après capture (non triés).</li>
+					</ul>
+					<!-- /plan description -->
+
+					<!-- signup button -->
+					<a class="btn btn-main" href="contact.html">Contactez-nous</a>
+					<!-- /signup button -->
+
+				</div>
+			</div>
+			<!-- end single pricing table -->
+
+
+		</div> <!-- End row -->
+	</div> <!-- End container -->
+</section> <!-- End section -->
 
 <footer id="footer" class="bg-one">
   <div class="top-footer">
@@ -305,7 +369,6 @@ End Fixed Navigation
 
 <!-- end Footer Area
 ========================================== -->
-
 <!-- 
     Essential Scripts
     =====================================-->
