--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <title>Bingo | Responsive Multipurpose Parallax HTML5 Template</title>
+  <title>DroneService17</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
@@ -185,9 +185,9 @@ End Fixed Navigation
 			<div class="col-md-6">
 				<h3>Mes références :</h3>
 				<p><b>Numéro de télépilote sur le site du Ministère Chargé des Transports :</b></p>
-				<p>FRA-RP-000000089577</p>
+				<p><code>FRA-RP-000000089577</code></p>
 				<p><b>Numéro d'exploitant sur le site du Ministère Chargé des Transports :</b></p>
-				<p>87887842000032</p>
+				<p><code>87887842000032</code></p>
 			</div>
 		</div>
 	</div>
