--- a/pricing.html
+++ b/pricing.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <title>Bingo | Responsive Multipurpose Parallax HTML5 Template</title>
+  <title>DroneService17</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
@@ -181,16 +181,17 @@ End Fixed Navigation
 					<!-- plan name & value -->
 					<div class="price-title">
 						<h3>Prises de vue aériennes de votre toiture</h3>
-						<strong class="value"><s>94€</s> 55€*</strong><br><small class="value-info">(promotion en cours)</small>
-						<!-- <p>Perfect for single freelancers who work by themselves</p> -->
+						<strong class="value"><s>94€</s> 68€*</strong><br><small class="value-info">(promotion en cours)</small>
+						<p class="details"><i class="tf-ion-ios-arrow-forward"></i> Nous nous déplaçons à domicile et réalisons, à l’aide d’un drone, des photos haute-définition (48Mpx) de toute la toiture (couverture, faitage, réseau d'évacuation, rivage,etc...).</p>
+						<p class="details"><i class="tf-ion-ios-arrow-forward"></i> Toutes les photos vous sont ensuite envoyées par mail via un lien de téléchargement, dans un délai maximum de 24heures.</p>
 					</div>
 					<!-- /plan name & value -->
 
 					<!-- plan description -->
-					<ul>
-						<li><i class="tf-ion-ios-arrow-forward"></i> Nous nous déplaçons à domicile et réalisons, à l’aide d’un drone, des photos haute-définition (48Mpx) de toute la toiture (couverture, faitage, réseau d'évacuation, rivage,etc...)</li>
-						<li><i class="tf-ion-ios-arrow-forward"></i> Toutes les photos vous sont ensuite envoyées par mail via un lien de téléchargement, dans un délai maximum de 24heures.</li>
-					</ul>
+					<!-- <ul>
+						<li></li>
+						<li></li>
+					</ul> -->
 					<!-- /plan description -->
 
 					<!-- signup button -->
@@ -207,22 +208,23 @@ End Fixed Navigation
 
 					<!-- plan name & value -->
 					<div class="price-title">
-						<h3>Diagnostic du couvreur</h3>
-						<strong class="value">35€</strong>
-						<p>Nous transmettons de manière anonyme les prises de vue réalisées à un couvreur partenaire afin qu’il établisse :</p>
+						<h3>Analyse des clichés par un couvreur partenaire</h3>
+						<strong class="value">35€</strong><small class="value-info"></small>
+						<p class="details"><i class="tf-ion-ios-arrow-forward"></i> Nous transmettons les clichés réalisés à l'un de nos couvreurs partenaires afin qu'il puisse identifier, s'il y a lieu, les éventuelles pathologies apparentes ( zone d'infiltration, fissures, obstruction du réseau d'évacuation, problème structurel ).</p>
+						<p class="details">Nous vous transmettons ensuite ses observations par mail, dans un délai rapide.</p>
 					</div>
 					<!-- /plan name & value -->
 
 					<!-- plan description -->
-					<ul>
-						<li><i class="tf-ion-ios-arrow-forward"></i> un compte rendu détaillé des éventuelles pathologies apparentes (fissures, zones d’infiltration, tuile déplacée ou cassée, obstruction du réseau d’évacuation, faîtage endommagé, etc...)</li>
-						<li><i class="tf-ion-ios-arrow-forward"></i>Ses recommandations sur les travaux à réaliser (s'il y a lieu)<br>(Exemple : démoussage, réparation faitage, remplacement de tuiles, etc...)</li>
-					</ul>
+					<!-- <ul>
+						<li>- un compte rendu détaillé des éventuelles pathologies apparentes (fissures, zones d’infiltration, tuile déplacée ou cassée, obstruction du réseau d’évacuation, faîtage endommagé, etc...)</li>
+						<li>- Ses recommandations sur les travaux à réaliser (s'il y a lieu)<br>(Exemple : démoussage, réparation faitage, remplacement de tuiles, etc...)</li>
+					</ul> -->
 					<!-- /plan description -->
 
-					<div class="price-title">
-						<p>Nous vous transmettons ce rapport dans un délai rapide.</p>
-					</div>
+					<!-- <div class="price-title">
+						<p><i class="tf-ion-ios-arrow-forward"></i> Nous vous transmettons ce rapport dans un délai rapide.</p>
+					</div> -->
 
 					<!-- signup button -->
 					<a class="btn btn-main" href="contact.html">Contactez-nous</a>
@@ -239,8 +241,8 @@ End Fixed Navigation
 					<!-- plan name & value -->
 					<div class="price-title">
 						<h3>Mise en relation avec un couvreur partenaire</h3>
-						<strong class="value">Offert</strong>
-						<p>Si vous souhaitez faire réaliser des travaux , nous pouvons vous mettre en relation avec l’un de nos couvreurs partenaires</p>
+						<strong class="value">Offert</strong><small class="value-info"></small>
+						<p class="details"><i class="tf-ion-ios-arrow-forward"></i> Si vous souhaitez faire réaliser des travaux , nous pouvons vous mettre en relation avec l’un de nos couvreurs partenaires.</p>
 					</div>
 					<!-- /plan name & value -->
 
@@ -278,7 +280,7 @@ End Fixed Navigation
 			</div>
 			<!-- /section title -->
 		</div>
-		<div class="row">
+		<div class="row justify-content-center">
 			<!-- single pricing table -->
 			<div class="col-lg-4 col-md-6">
 				<div class="pricing-item">
@@ -286,7 +288,7 @@ End Fixed Navigation
 					<!-- plan name & value -->
 					<div class="price-title">
 						<h3>Expert d’assurance, couvreur, site industriel,...</h3>
-						<strong class="value">En fonction de la demande</strong>
+						<!-- <strong class="value">En fonction de la demande</strong> -->
 						<!-- <p>Perfect for single freelancers who work by themselves</p> -->
 					</div>
 					<!-- /plan name & value -->
