--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <title>Bingo | Responsive Multipurpose Parallax HTML5 Template</title>
+  <title>DroneService17</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
@@ -172,46 +172,47 @@ End Fixed Navigation
 			</div>
 			<!-- /section title -->
 		</div>
- 		<div class="row">
+ 		<div class="row justify-content-center">
  			<!-- Contact Details -->
  			<div class="contact-details col-md-6 ">
- 				<h3 class="mb-3">Contact</h3>
+ 				<!-- <h3 class="mb-3">Contact</h3>
  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, vero, provident, eum eligendi blanditiis ex
  					explicabo vitae nostrum facilis asperiores dolorem illo officiis ratione vel fugiat dicta laboriosam labore
- 					adipisci.</p>
+ 					adipisci.</p> -->
+        <img loading="lazy" src="images/drone-service.jpg" class="img-fluid" alt="">
  				<ul class="contact-short-info mt-4">
- 					<li class="mb-3">
+ 					<!-- <li class="mb-3">
  						<i class="tf-ion-ios-home"></i>
  						<span>Khaja Road, Bayzid, Chittagong, Bangladesh</span>
- 					</li>
+ 					</li> -->
  					<li class="mb-3">
  						<i class="tf-ion-android-phone-portrait"></i>
- 						<span>Phone: +880-31-000-000</span>
+ 						<span>Phone: <a href="tel:0607568091">06.07.56.80.91</a></span>
  					</li>
- 					<li class="mb-3">
+ 					<!-- <li class="mb-3">
  						<i class="tf-ion-android-globe"></i>
  						<span>Fax: +880-31-000-000</span>
- 					</li>
+ 					</li> -->
  					<li>
  						<i class="tf-ion-android-mail"></i>
- 						<span>Email: hello@meghna.com</span>
+ 						<span>Email: <a href="mailto:droneservice17@gmail.com">droneservice17@gmail.com</a></span>
  					</li>
  				</ul>
  				<!-- Footer Social Links -->
- 				<div class="social-icon">
+ 				<!-- <div class="social-icon">
  					<ul>
  						<li><a href="https://themefisher.com/"><i class="tf-ion-social-facebook"></i></a></li>
  						<li><a href="https://themefisher.com/"><i class="tf-ion-social-twitter"></i></a></li>
  						<li><a href="https://themefisher.com/"><i class="tf-ion-social-dribbble-outline"></i></a></li>
  						<li><a href="https://themefisher.com/"><i class="tf-ion-social-linkedin-outline"></i></a></li>
  					</ul>
- 				</div>
+ 				</div> -->
  				<!--/. End Footer Social Links -->
  			</div>
  			<!-- / End Contact Details -->
 
  			<!-- Contact Form -->
- 			<div class="contact-form col-md-6 ">
+ 			<!-- <div class="contact-form col-md-6 ">
  				<form id="contact-form" method="post" role="form">
  					<div class="form-group mb-4">
  						<input type="text" placeholder="Ton nom" class="form-control" name="name" id="name" required>
@@ -233,7 +234,7 @@ End Fixed Navigation
  					</div>
 
  				</form>
- 			</div>
+ 			</div> -->
  			<!-- ./End Contact Form -->
 
  		</div> <!-- end row -->
