fix pricing boxes

--- a/pricing.html
+++ b/pricing.html
@@ -173,7 +173,7 @@ End Fixed Navigation
 			</div>
 			<!-- /section title -->
 		</div>
-		<div class="row">
+		<div class="row pricing-boxes">
 			<!-- single pricing table -->
 			<div class="pricing-container col-lg-4 col-md-6">
 				<div class="pricing-item">
